Fixed What's bestboq

--- a/BestBoQ/BestBoQ/theme/css/style.css
+++ b/BestBoQ/BestBoQ/theme/css/style.css
@@ -218,7 +218,7 @@ Banner
 }
 
 .intro-para {
-    font-family: 'Alegreya Sans', sans-serif;
+    /*font-family: 'Alegreya Sans', sans-serif;*/
     font-size: 45px;
     color: #fff;
     margin-top: 30px;
