logo, ถังสีเป็นสีเขียว

--- a/BestBoQ/BestBoQ/Main.Master
+++ b/BestBoQ/BestBoQ/Main.Master
@@ -86,7 +86,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" href="Home.aspx">
-                        <img height="65" src="images/logo.jpg" />
+                        <img height="65" src="images/logo_new.png" />
                     </a>
                 </div>
                 <div class="collapse navbar-collapse" id="myNavbar">
