Fix Bug Mr.BestBoQ

--- a/BestBoQ/BestBoQ/HomeNestedMaster.master
+++ b/BestBoQ/BestBoQ/HomeNestedMaster.master
@@ -7,16 +7,16 @@
 <asp:Content ID="Content2" ContentPlaceHolderID="navcontent" runat="server">
     <ul class="nav navbar-nav navbar-right">
         <li>
-            <a href="Home.aspx">Home</a>
+            <a href="Home.aspx"><span class="fa fa-home"></span> Home</a>
         </li>
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Management<span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="fa fa-gear"></span> Management<span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a href="Approve.aspx">Account Management</a></li>
             </ul>
         </li>
         <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%=Session["Username"] %><span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="fa fa-user"></span> <%=Session["Username"] %><span class="caret"></span></a>
             <ul class="dropdown-menu">
                 <li><a href="Profile.aspx">My Profile</a></li>
                 <li role="separator" class="divider"></li>
